<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Certifications"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <EditText
        android:id="@+id/etCertification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/certification_name" />

    <EditText
        android:id="@+id/etIssuer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/issuing_organization" />

    <Button
        android:id="@+id/btnSaveCertifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancelCertifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>